--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [project]
-name = "labs"
+name = "library"
 version = "0.1.0"
-description = "Add your description here"
-requires-python = ">=3.12"
+description = ""
+requires-python = ">=3.14"
 dependencies = [
     "pytest>=8.4.2",
+    "pre-commit>=4.5.0"
 ]
